# Breaking-Data-Reto-3-Final

./: README.md
docs/: 01_discoveries.md  02_baseline_analysis.md  03_evolution_of_strategies.md
entrenamiento/: .gitignore  check_shape.py  diagnostic_onnx.py  diagnostic_vision.py  eval_vs_atari.py  evaluate_candidates.py  export_aggressive_heuristic.py  export_aggressive_rhythm.py  export_exact_heuristic.py  export_kill.py  export_onnx.py  export_perfect.py  export_rhythm.py  export_sniper.py  export_stupid.py  export_trapper.py  export_unstoppable.py  generate_dataset.py  generate_expert_v2.py  submission_aggressive.py  submission_aggressive_rhythm.py  submission_bc.py  submission_dense.py  submission_rf.py  submission_rhythm.py  submission_unstoppable.py  submission_v7_backup.py  test_action_counts.py  test_action_map.py  test_aggressive_random.py  test_ale.py  test_ale_player.py  test_anti_random.py  test_approach_then_punch.py  test_baseline_fight.py  test_both_approach.py  test_both_spam_fire.py  test_bruteforce_score.py  test_center_spam.py  test_comprehensive.py  (+51 more)
inferencia/: arena.py  create_dummy_onnx.py  eval_tournament.py  interfaz.py  pyproject.toml  telemetry.py  telemetry2.py  telemetry3.py  telemetry4.py  telemetry5.py  test_ram.py
inferencia/modelos/Aquatic_Agents/: README.md  modelo.onnx  submission.py
inferencia/modelos/equipo_onnx/: modelo_boxing.onnx  submission.py
inferencia/modelos/equipo_random/: submission.py
inferencia/modelos/equipo_vision/: submission.py
